--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 :root {
   --font-size-14: 14px;
+  --font-size-huge: 30px;
   --primary: #1a1a2e;
   --grey_1: #777777;
   --grey_3: #d3d3d3;
   --grey_2: #333333;
+  --grey_4: #f5f5f5;
   --green: #4caf50;
 }
 
@@ -154,8 +156,15 @@ html {
   font-size: 1.5rem;
   margin-left: 10px;
 }
-.events{
-    margin-top: 3rem;
+.events {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+.events > div {
+  margin-right: 2rem;
+  margin: 20px;
+  margin-left: 0px;
 }
 .e1 {
   position: relative;
@@ -164,22 +173,91 @@ html {
 }
 .eventhold {
   width: 500px;
-  height: 250px;
+  height: 220px;
   flex-shrink: 0;
   border-radius: 30px;
+  padding: 20px;
+  display: flex;
+
+  flex-direction: column;
+  justify-content: flex-end;
   background: linear-gradient(291deg, #1a1a2e 53.33%, #545494 130.6%);
 }
+.eventhold_1 {
+  width: 500px;
+  height: 220px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: linear-gradient(291deg, #1a1a2e 53.33%, #545494 130.6%);
+}
+
+.ev_text {
+  font-size: 16px;
+}
+
 .bottomevent {
   width: 420px;
-  height: 253px;
+  height: 200;
   flex-shrink: 0;
   border-radius: 30px;
   background: #545494;
   position: absolute;
-  top:0;
+  top: 0;
   margin: auto;
   left: 0;
   right: 0;
-  bottom:-30px;
+  bottom: -10px;
   z-index: -1;
+}
+
+.ev1 {
+  display: flex;
+  color: var(--grey_3);
+  align-items: center;
+}
+
+.ev1 img {
+  width: 40px;
+  height: auto;
+  margin-right: 10px;
+}
+.ev3{
+    display: flex;
+}
+
+.ev3 > div{
+    margin-right:50px;
+}
+.vl0{
+  color: var(--grey_3);
+  margin-bottom: 10px;
+}
+.vl1{
+    color: #fff;
+}
+.button_matter {
+  display: flex;
+  align-items: center;
+  color: #000000;
+  background-color: #ffffff;
+  width: 150px;
+  padding: 20px;
+  padding-top: 15px;
+  padding-bottom:15px;
+  justify-content: center;
+  border-radius: 30px;
+}
+.ev2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ev2 h2 {
+  color: var(--grey_4);
+  font-size: var(--font-size-huge);
 }
