--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ html {
   font-size: 1.2rem;
   margin-right: 10px;
   color: var(--grey_1);
+  cursor: pointer;
 }
 
 .nav {
@@ -126,7 +127,8 @@ html {
 }
 
 .sidebar_list {
-  margin-top: 5rem;
+
+  min-height: 200px;
 }
 
 .sidebar_list div {
@@ -136,6 +138,10 @@ html {
 .sidebar_list_next div {
   cursor: pointer;
   margin-bottom: 1rem;
+}
+
+.shift_1{
+    margin-left:20px;
 }
 .support_item {
   display: flex;
@@ -150,27 +156,47 @@ html {
   padding-bottom: 10px;
   left: 10px;
   border-radius: 30px;
+  cursor: pointer;
 }
+
+.sidebar_slide{
+    overflow-y: scroll;
+    margin-top: 5rem;
+    max-height: 60%;
+}
+
+.sidebar_slide::-webkit-scrollbar {
+ background-color: transparent;
+  }
+.sidebar_slide::-webkit-scrollbar-thumb {
+    background-color: rgba(84, 84, 148, 0.30);
+    width: 10px;
+    border-radius: 30px;
+  }
 
 .support_item i {
   font-size: 1.5rem;
   margin-left: 10px;
 }
+
 .events {
   margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
 }
+
 .events > div {
   margin-right: 2rem;
   margin: 20px;
   margin-left: 0px;
 }
+
 .e1 {
   position: relative;
   max-width: max-content;
   min-width: max-content;
 }
+
 .eventhold {
   width: 500px;
   height: 220px;
@@ -178,11 +204,11 @@ html {
   border-radius: 30px;
   padding: 20px;
   display: flex;
-
   flex-direction: column;
   justify-content: flex-end;
   background: linear-gradient(291deg, #1a1a2e 53.33%, #545494 130.6%);
 }
+
 .eventhold_1 {
   width: 500px;
   height: 220px;
@@ -225,6 +251,7 @@ html {
   height: auto;
   margin-right: 10px;
 }
+
 .ev3 {
   display: flex;
 }
@@ -253,7 +280,9 @@ html {
   padding-bottom: 15px;
   justify-content: center;
   border-radius: 30px;
+  cursor: pointer;
 }
+
 .button_matter_preem {
   display: flex;
   align-items: center;
@@ -262,12 +291,14 @@ html {
   width: 150px;
   padding: 20px;
   padding-top: 15px;
+  cursor: pointer;
   margin-right: 10px;
   margin-top: 10px;
   padding-bottom: 15px;
   justify-content: center;
   border-radius: 30px;
 }
+
 .button_matter_grey {
   display: flex;
   align-items: center;
@@ -275,6 +306,7 @@ html {
   background-color: #e0e0e0;
   width: 150px;
   padding: 20px;
+  cursor: pointer;
   padding-top: 15px;
   margin-right: 10px;
   margin-top: 10px;
@@ -282,6 +314,7 @@ html {
   justify-content: center;
   border-radius: 30px;
 }
+
 .h21 {
   display: flex;
   flex-wrap: wrap;
@@ -301,28 +334,70 @@ html {
 .otherevent {
   padding: 30px;
 }
+
 .marketevent {
   padding: 30px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .f09 {
   font-size: 15px;
   color: var(--grey_2);
 }
+
 .n43 {
   display: flex;
   justify-content: space-between;
 }
+
 .m99 {
-  width: 500px;
-}
-.m88 {
+  width: 450px;
+  min-width: 350px;
+  margin-right: 20px;
   margin-top: 20px;
-  width: 553px;
+}
+
+.m88 {
+  margin-top: 10px;
+  width: 100%;
   height: 150px;
   flex-shrink: 0;
+  display: flex;
+  align-items: flex-end;
   border-radius: 30px;
   background: #fff;
   box-shadow: 0px 16px 26.8px 10px rgba(207, 207, 207, 0.25);
+}
+
+.m88 > div{
+    width: 50%;
+}
+
+.ml0{
+    width: 50%;
+    padding: 10px;
+    height: 100%;
+}
+
+.ml1{
+    padding: 20px;
+}
+
+.ml1 i{
+    transform: rotate(45deg);
+    font-size: 1.5rem;
+}
+
+.ml10 {
+    display: flex;
+    align-items: center;
+    margin-bottom:5px;
+}
+
+.ml0 img{
+    width: 100%;
+    border-radius: 20px;
+    height: 100%;
+    object-fit: cover;
 }
