--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ html {
 }
 
 .eventhold_1 {
-  width: 500px;
+  max-width: 500px;
   height: 220px;
   flex-shrink: 0;
   border-radius: 30px;
@@ -231,7 +231,7 @@ html {
 }
 
 .bottomevent {
-  width: 420px;
+  width: 90%;
   height: 200;
   flex-shrink: 0;
   border-radius: 30px;
@@ -286,6 +286,7 @@ html {
   justify-content: center;
   border-radius: 30px;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .button_matter_preem {
